# KMC-

./: KMC_GetInput.ipynb  PSSPEDOT.py  README.md
KMC_pos/: CMakeLists.txt  README.md  run
KMC_pos/include/: EnumNames.h  KmcRun.h  Neighbour.h  Neighbourlist.h  NextEventList.h  OutputManager.h  Particle.h  RandomEngine.h  RateEngine2.h  RateOptions.h  SimulationOptions.h  Site.h  Topology.h  constants.h
KMC_pos/input/: nbList.txt  options.xml  sites.txt
KMC_pos/src/: KmcRun.cpp  Neighbourlist.cpp  NextEventList.cpp  OutputManager.cpp  RateEngine2.cpp  Site.cpp  Topology.cpp  main.cpp
ewaldOut/: README.md  ewald_jobs.xml
ewaldOut/withE002/1/: ewald_jobs.xml
ewaldOut/withE002/2/: ewald_jobs.xml
ewaldOut/withE002/3/: ewald_jobs.xml
ewaldOut/withE002/4/: ewald_jobs.xml
iqmOut/: README.md
iqmOut/1/: iqm_ss_ss.jobs  iqm_ss_ss_2NN.jobs  iqm_ss_ss_NN.jobs  iqm_ss_ss_noh.jobs  iqm_ss_ss_noh_2NN.jobs  iqm_ss_ss_noh_NN.jobs
iqmOut/16_withE002/1/: iqm_ss_ss.jobs  iqm_ss_ss_NN.jobs  iqm_ss_ss_noh.jobs  iqm_ss_ss_noh_NN.jobs
iqmOut/16_withE002/2/: iqm_ss_ss.jobs  iqm_ss_ss_NN.jobs  iqm_ss_ss_noh.jobs  iqm_ss_ss_noh_NN.jobs
